Style added for table and spacing issues fixed

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -10,45 +10,41 @@ html {
 	-webkit-text-size-adjust: 100%;
 	margin: 0;
 	padding: 0;
-	background-color:#ccc;
 }
 
 body {
 	color: #555753; 
-	background: #fff
-	margin: 0; 
+	background: #bbe;
+	margin: 0;
 	padding: 0;
-}
-
-table {
-}
-
-div {
 	font-size: 2em;
 }
 
+table, th, td, th {
+	text-align: center;
+}
+
+table {
+    table-layout: fixed;
+    overflow: hidden;
+}
+
 .content{
+	padding-left: 60px;
+	padding-top: 60px;
+	padding-bottom: 120px;
 	font-size: 1em;
-	width:800px;
+	width:1200px;
 	margin: 0 auto;
-	background-color: #fff;
+	background-color: #fce;
 	box-shadow: 10px 10px 5px #888888;
 }
 
-/*
-.background{
-	min-width: 100%;
-	margin: 0px;
-	padding: 0px;
-	background-position: 0px 0px;
-	background-color: #eee;
-	position: relative;
-	z-index: 0;
+.divider{
+	padding: 10px;
 }
-*/
 
 .styledButton {
-	float:bottom;
 	-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
 	-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
 	box-shadow: 0px 0px 0px 2px #9fb4f2;
@@ -81,7 +77,6 @@ div {
 	background:-o-linear-gradient(top, #476e9e 5%, #7892c2 100%);
 	background:-ms-linear-gradient(top, #476e9e 5%, #7892c2 100%);
 	background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#7892c2',GradientType=0);
 	background-color:#476e9e;
 }
 .styledButton:active {
